<resources>
    <string name="app_name">TechMart</string>

    <string name="invalid_password">Your password must be at least 8 characters long, letters and numbers.</string>
    <string name="invalid_email"> Email field is empty</string>
    <string name="invalid_url">  this url is not valid</string>
    <string name="invalid_email_format"> Enter valid email</string>
    <string name="empty_mail_field">Empty field</string>
    <string name="enter_your_password">Please enter your password</string>
    <string name="no_internet_connection">Kindly check the internet connection.</string>
    <string name="select_group">Please select category first.</string>
    <string name="not_supported_image">Please select Format: jpg,tiff.</string>
    <string name="not_image">Please select image</string>
    <string name="image_size_exceed">Please select image less than 1M</string>
    <string name="select_title">Please enter Title</string>
    <string name="select_Post">Please enter Description</string>
    <string name="select_location">Please Select  Location</string>
    <string name="select_date">Please Select  Date</string>
    <string name="large_image">Please select image less than 1MB in size.</string>
    <string name="no_image">Please select an attach image.</string>
    <string name="mobile_number">Mobile Number</string>
    <!--<string name="hint_mobile">mobile number Ex(+97xxxxxxxxxxxx)</string>-->
    <string name="hint_mobile">please enter phone number</string>
    <string name="email">Email</string>
    <string name="hint_email">Your email goes here</string>
    <string name="passord">Password</string>
    <string name="upload_pic">Upload Your Profile Picture</string>
    <string name="hint_pic">Format: jpg,tiff, less than 1MB</string>
    <string name="attach">Upload</string>
    <string name="upload_multimedia">Upload multimedia</string>
    <string name="remove_multimedia">remove media</string>
    <string name="register">Register</string>
    <string name="home">Timeline</string>
    <string name="my_group">My Group</string>
    <string name="new_group">Join New Group</string>
    <string name="messages">Messages</string>
    <string name="schedule">Schedule</string>
    <string name="setting">Settings</string>
    <string name="logout">Log out</string>
    <string name="menu_name">Abdul Rahman</string>
    <string name="password_hint">************</string>

    <string-array name="nav_drawer_titles">
        <item>Timeline</item>
        <item>Manage My Groups</item>
        <item>My Groups</item>
        <item>Join New Group</item>
        <item>Messages</item>
        <item>Schedule</item>
        <item>Settings</item>
        <item>Log out</item>
    </string-array>
    <string name="drawer_opened_desc">Drawer is Opened</string>
    <string name="drawer_closed_desc">Drawer is Closed</string>
    <string name="preference_setting">Preference Settings</string>
    <string name="change">Change</string>
    <string name="notification">Notifications</string>
    <string name="change_pass">Change Password</string>
    <string name="new_pass">New Password</string>
    <string name="repeat_pass">Repeat New Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="login_id">Email</string>
    <string name="enter_id">Enter your email</string>
    <string name="forget">Forgot Your Password?</string>

    <string name="country_council">Country Council</string>
    <string name="business_associates">Business Associates</string>
    <string name="groups">Groups</string>
    <string name="copyright">Copyright &#169; 2017 |</string>
    <string name="department">Department of Economic Development Dubai</string>
    <string name="select_your_category">Select Your Category</string>
    <string name="next">Next</string>
    <string name="view_details">View Details</string>
    <string name="view_profile">View Profile</string>
    <string name="view_remove">Remove</string>
    <string name="member">Members</string>

    <color name="colorPrimary">#3f51b5</color>
    <color name="colorPrimaryDark">#303F9F</color>
    <color name="colorAccent">#FF4081</color>

    <string name="prev"><![CDATA[< Pervious]]></string>
    <string name="next_btn"><![CDATA[Next >]]></string>
    <string name="search_name">Enter your full name</string>
    <string name="description">A line break that is inserted manually, and preserved when re-flowing</string>
    <string name="enter_description">Please provide short description</string>
    <string name="action_settings">Setting</string>
    <string name="group_description">A line break that is inserted manually, and preserved when re-flowing, may still be distinct from a paragraph break, although this is typically  Many published books use a device to separate certain paragraphs further when there is a change of scene or time</string>
    <string name="group_description2">Emirate enviroment group  06 April - 08 April 2017  common English usage misconception  The crafting of clear</string>
    <string name="name_length_not_valid">Please enter valid name</string>
    <string name="invalid_mobile_number">Please enter valid mobile number</string>
    <string name="invalid_mobile_number_97">mobile number should start with 97</string>
    <string name="invalid_mobile_number_size">mobile number should be 14 numbers</string>
    <string name="manage_settings">Manage</string>
    <string name="approved">Approve</string>
    <string name="rejected">Reject</string>
    <string name="defer">Defer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="singn_in">SIGN IN</string>
    <string name="company">Company Name</string>
    <string name="hint_company">enter your company name</string>
    <string name="company_position">Position</string>
    <string name="hint_position">enter your company position</string>
    <string name="company_length_not_valid">Please enter valid Company name</string>
    <string name="position_length_not_valid">Please enter valid position</string>
    <string name="enter_password">Enter your password</string>
    <string name="posts">Posts</string>
    <string name="event">Events</string>
    <string name="group_member">Group Members</string>
    <string name="group">Groups </string>
    <string name="timeline_member">Members</string>
    <string name="timeline_member_approve">Membership Approval</string>
    <string name="share_via">TechMart Link</string>
    <string name="title_activity_maps">Map</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="disconnect">Disconnect</string>
    <string name="canecl_connect">Cancel Request</string>
    <string name="pending">Pending</string>
    <string name="approve_connect">Approve Request</string>
    <string name="connect">Connect</string>
    <string name="thanks_you">Thanks for reaching out.\n Our team will be happy support you</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="contact_us">Contact Us</string>
    <string name="check_internet">Kindly check the internet connection.</string>
    <string name="email_exist">This Email is already Taken before.</string>
    <string name="error_happened">Some error happened .. please try again.</string>
    <string name="error_happened_login">Login Failed, please check email or password.</string>
    <string name="error_login">Something wrong happened, please try again.</string>
    <string name="add_post">Post under progress.</string>
    <string name="add_event">Event under progress.</string>



    <string name="edit_hint_header">Write heading for this timeLine.</string>
    <string name="search_hint">Enter Search</string>
    <string name="storage_rationale">We need storage permission to access your media to be able to add post s, events to the app</string>
    <string name="camera_rationale">We need Camera permission to access your media to be able to add post s, events to the app</string>



</resources>
