<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <TableLayout
            android:id="@+id/layout_dialog"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@android:color/white"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_dialog_title"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/contact_us"
                android:textColor="@color/mdtp_dark_gray" />

            <TextView
                android:id="@+id/tv_dialog_text"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/thanks_you"
                android:textColor="@color/mdtp_dark_gray" />


            <TableRow
                android:id="@+id/tr_2actions_buttons"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/btn_call"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_register_selector"
                    android:text="@string/call"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_message"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_register_selector"
                    android:text="@string/message"
                    android:textColor="@android:color/white" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/iv_dismiss_dialog"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/contact_close" />
    </RelativeLayout>
</LinearLayout>