<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_join_dialog"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_setting_white" />

        <com.a700apps.techmart.utils.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_icon"
            android:text="@string/manage_settings"
            android:textColor="@color/white" />


        <ImageView
            android:id="@+id/ic_icon_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close_circle" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/acceptLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_approve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_approved" />

            <com.a700apps.techmart.utils.DateTimePicker.CustomLightTextView
                android:layout_width="wrap_content"
                android:id="@+id/tv_approve"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:textSize="12sp"
                android:text="@string/approved" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deferLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_defer"
                android:id="@+id/iv_defer" />

            <com.a700apps.techmart.utils.DateTimePicker.CustomLightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:textSize="12sp"
                android:id="@+id/tv_defer"
                android:text="@string/defer" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rejectLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_reject"
                android:src="@drawable/ic_reject" />

            <com.a700apps.techmart.utils.DateTimePicker.CustomLightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:textSize="12sp"
                android:id="@+id/tv_reject"
                android:text="@string/rejected" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>